<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="developer">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="subject_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="body_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_support">AYarYand@ya.ru</string>
    <string name="refresh">Обновить</string>
    <string name="communications_problem">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="was_looking_for">Вы искали</string>
    <string name="progress">00:00</string>
    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="clear_history">Очистить историю</string>
    <string name="favorite">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorite_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists_is_empty">Вы не создали\n  ни одного плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
</resources>