<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/long_padding"
        android:backgroundTint="?attr/colorPrimary"
        android:fontFamily="@font/ys_display_regular"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/medium_padding"
        android:paddingVertical="@dimen/long_medium_padding"
        android:text="@string/dark_theme"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        android:textFontWeight="400"
        android:textSize="@dimen/low_text_size"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sharing"
        style="@style/SettingsButtonStyle"
        android:drawableEnd="@drawable/ic_share_24"
        android:text="@string/share_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        style="@style/SettingsButtonStyle"
        android:drawableEnd="@drawable/ic_support_24"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreement"
        style="@style/SettingsButtonStyle"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:text="@string/agreement" />

</LinearLayout>

