<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="@dimen/medium_padding"
            android:paddingTop="14dp"
            android:paddingLeft="@dimen/medium_padding"
            android:text="@string/playlist_maker"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_padding"
        android:paddingTop="@dimen/long_padding"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/null_size"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/medium_padding"
            app:icon="@drawable/search_icon"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/short_padding"
            android:text="@string/search"
            android:textColor="@color/black"/>


        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="@dimen/null_size"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:paddingTop="@dimen/medium_padding"
            app:cornerRadius="@dimen/medium_padding"
            app:icon="@drawable/media_library_icon"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/short_padding"
            android:text="@string/media_library"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/null_size"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:paddingTop="@dimen/medium_padding"
            app:cornerRadius="@dimen/medium_padding"
            app:icon="@drawable/settings_icon"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/short_padding"
            android:text="@string/settings"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>